--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "./node_modules/nodemon/bin/nodemon.js",
     "load": "node src/utils/data_loader.js --",
     "lint": "./node_modules/eslint/bin/eslint.js src tests",
-    "start": "node ./src/app.js",
+    "start": "nodemon ./src/app.js",
     "test": "jest --no-colors",
     "testdev": "jest --watch"
   },
@@ -39,6 +39,6 @@
     "@babel/eslint-parser": "^7.15.8",
     "eslint": "^8.0.0",
     "jest": "^27.2.5",
-    "nodemon": "^2.0.13"
+    "nodemon": "^2.0.21"
   }
 }
